Add, Header, section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel styles="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="assets/style/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Portfolio Ahmede Samy</title>
   </head>
   <body>
-    <script src="/script/main.js"></script>
+    <header>
+      <div class="container">
+        <div class="logo">
+          <a href="index.html">Ahmed</a>
+        </div>
+        <nav>
+          <input type="checkbox" id="check" />
+          <label for="check">
+            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-xmark"></i>
+          </label>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about us">About us</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section>
+        <div class="container">
+          <h1>I'm Ahmed</h1>
+          <img src="/assets/imge/WhatsApp_Image_2025-06-26_at_7_LE_upscale_balanced_x4-removebg-preview.png" />
+        </div>
+      </section>
+    </main>
+    <script src="assets/script/main.js"></script>
   </body>
 </html>
